Worked on allele frequency analysis (#1234)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@4639 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Analysis.Views/3.3/HeuristicLab.Analysis.Views-3.3.csproj
+++ b/sources/HeuristicLab.Analysis.Views/3.3/HeuristicLab.Analysis.Views-3.3.csproj
@@ -116,11 +116,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="HeuristicLabAnalysisViewsPlugin.cs.frame" />
-    <Compile Include="AlleleFrequencyArrayView.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="AlleleFrequencyArrayView.Designer.cs">
-      <DependentUpon>AlleleFrequencyArrayView.cs</DependentUpon>
+    <Compile Include="AlleleFrequencyCollectionView.cs" />
+    <Compile Include="AlleleFrequencyCollectionView.Designer.cs">
+      <DependentUpon>AlleleFrequencyCollectionView.cs</DependentUpon>
     </Compile>
     <Compile Include="HeuristicLabAnalysisViewsPlugin.cs" />
     <Compile Include="AlleleFrequencyView.cs">
