Fixed memory leak when using parameters whose values are not deeply cloned (#1268)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk/sources@4825 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/HeuristicLab.Problems.TravelingSalesman/3.3/HeuristicLab.Problems.TravelingSalesman-3.3.csproj
+++ b/HeuristicLab.Problems.TravelingSalesman/3.3/HeuristicLab.Problems.TravelingSalesman-3.3.csproj
@@ -108,6 +108,7 @@
     <Compile Include="Analyzers\BestTSPSolutionAnalyzer.cs" />
     <Compile Include="Analyzers\TSPPopulationDiversityAnalyzer.cs" />
     <Compile Include="Analyzers\TSPAlleleFrequencyAnalyzer.cs" />
+    <Compile Include="DistanceMatrix.cs" />
     <Compile Include="Evaluators\TSPEuclideanPathEvaluator.cs" />
     <Compile Include="Evaluators\TSPGeoPathEvaluator.cs" />
     <Compile Include="HeuristicLabProblemsTravelingSalesmanPlugin.cs" />
