--- a/HeuristicLab.Operators.Programmable/3.3/HeuristicLab.Operators.Programmable-3.3.csproj
+++ b/HeuristicLab.Operators.Programmable/3.3/HeuristicLab.Operators.Programmable-3.3.csproj
@@ -115,6 +115,7 @@
     <Compile Include="ProgrammableOperatorView.Designer.cs">
       <DependentUpon>ProgrammableOperatorView.cs</DependentUpon>
     </Compile>
+    <Compile Include="ProgrammableSingleSuccessorOperator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
