Implemented review comments (#1236)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk/sources@4847 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/HeuristicLab.Problems.VehicleRouting.Views/3.3/HeuristicLab.Problems.VehicleRouting.Views-3.3.csproj
+++ b/HeuristicLab.Problems.VehicleRouting.Views/3.3/HeuristicLab.Problems.VehicleRouting.Views-3.3.csproj
@@ -111,6 +111,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HeuristicLabProblemsVehicleRoutingViewsPlugin.cs" />
+    <Compile Include="VRPImportDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="VRPImportDialog.Designer.cs">
+      <DependentUpon>VRPImportDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="VRPSolutionView.cs">
       <SubType>UserControl</SubType>
     </Compile>
