added SGP classification demo to project. #1271
git-svn-id: https://src.heuristiclab.com/svn/core/trunk/sources@4855 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/HeuristicLab.Optimizer/3.3/HeuristicLab.Optimizer-3.3.csproj
+++ b/HeuristicLab.Optimizer/3.3/HeuristicLab.Optimizer-3.3.csproj
@@ -110,6 +110,7 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Documents\GA_VRP.hl" />
+    <EmbeddedResource Include="Documents\SGP-SymbolicClassification-Mammographic.hl" />
     <None Include="HeuristicLabOptimizerPlugin.cs.frame" />
     <Compile Include="CreateExperimentDialog.cs">
       <SubType>Form</SubType>
