Implemented review changes (#1236)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk/sources@4856 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/HeuristicLab.Problems.VehicleRouting.Views/3.3/HeuristicLab.Problems.VehicleRouting.Views-3.3.csproj
+++ b/HeuristicLab.Problems.VehicleRouting.Views/3.3/HeuristicLab.Problems.VehicleRouting.Views-3.3.csproj
@@ -110,6 +110,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="VRPEncodingView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="VRPEncodingView.Designer.cs">
+      <DependentUpon>VRPEncodingView.cs</DependentUpon>
+    </Compile>
     <Compile Include="HeuristicLabProblemsVehicleRoutingViewsPlugin.cs" />
     <Compile Include="VRPImportDialog.cs">
       <SubType>Form</SubType>
