--- a/HeuristicLab.Analysis/3.3/HeuristicLab.Analysis-3.3.csproj
+++ b/HeuristicLab.Analysis/3.3/HeuristicLab.Analysis-3.3.csproj
@@ -117,6 +117,7 @@
     <Compile Include="BestQualityMemorizer.cs" />
     <Compile Include="Allele.cs" />
     <Compile Include="AlleleFrequency.cs" />
+    <Compile Include="DataTableVisualProperties.cs" />
     <Compile Include="DataTableHistory.cs" />
     <Compile Include="HeatMapHistory.cs" />
     <Compile Include="HeatMap.cs" />
