--- a/sources/HeuristicLab.ExtLibs/HeuristicLab.ALGLIB/2.5.0/HeuristicLab.ALGLIB-2.5.0/HeuristicLab.ALGLIB-2.5.0.csproj
+++ b/sources/HeuristicLab.ExtLibs/HeuristicLab.ALGLIB/2.5.0/HeuristicLab.ALGLIB-2.5.0/HeuristicLab.ALGLIB-2.5.0.csproj
@@ -110,7 +110,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\HeuristicLab.PluginInfrastructure\3.3\HeuristicLab.PluginInfrastructure-3.3.csproj">
       <Project>{94186A6A-5176-4402-AE83-886557B53CCA}</Project>
-      <Name>HeuristicLab.PluginInfrastructure</Name>
+      <Name>HeuristicLab.PluginInfrastructure-3.3</Name>
     </ProjectReference>
     <ProjectReference Include="..\ALGLIB-2.5.0\ALGLIB-2.5.0.csproj">
       <Project>{29E4B033-1FEF-4FE1-AE17-0A9319D7C54E}</Project>
