#1337  * Added clone icon
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@5094 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Common.Resources/3.3/HeuristicLab.Common.Resources-3.3.csproj
+++ b/sources/HeuristicLab.Common.Resources/3.3/HeuristicLab.Common.Resources-3.3.csproj
@@ -425,6 +425,7 @@
     <None Include="Resources\VS2008ImageLibrary\VS2008ImageLibrary_Objects_Executable_Stopped.png" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Resources\VS2008ImageLibrary\VS2008ImageLibrary_Objects_Clone.png" />
     <None Include="Resources\VS2008ImageLibrary\VS2008ImageLibrary_Objects_Cab.png" />
     <None Include="Resources\VS2008ImageLibrary\VS2008ImageLibrary_Actions_Gradient.png" />
     <None Include="Resources\VS2008ImageLibrary\VS2008ImageLibrary_Actions_EditBrightnessContrast.png" />
