#1040  * Merged NSGA-II into trunk  * Ranking and crowding operators moved to !HeuristicLab.Optimization.Operators  * `CrowdedTournamentSelector` moved to !HeuristicLab.Selection  * Pareto front analyzer moved to !HeuristicLab.Analysis with a base class should there be more (as discussed with swagner and mkommend)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@5143 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Analysis/3.3/HeuristicLab.Analysis-3.3.csproj
+++ b/sources/HeuristicLab.Analysis/3.3/HeuristicLab.Analysis-3.3.csproj
@@ -123,6 +123,8 @@
     <Compile Include="DataVisualization\DataTableVisualProperties.cs" />
     <Compile Include="DataVisualization\HeatMap.cs" />
     <Compile Include="DataVisualization\HeatMapHistory.cs" />
+    <Compile Include="MultiObjective\RankBasedParetoFrontAnalyzer.cs" />
+    <Compile Include="MultiObjective\ParetoFrontAnalyzer.cs" />
     <Compile Include="PopulationDiversityAnalysis\PopulationDiversityAnalyzer.cs" />
     <Compile Include="QualityAnalysis\BestAverageWorstQualityAnalyzer.cs" />
     <Compile Include="QualityAnalysis\BestAverageWorstQualityCalculator.cs" />
