--- a/sources/HeuristicLab.Problems.DataAnalysis.Classification/3.3/HeuristicLab.Problems.DataAnalysis.Classification-3.3.csproj
+++ b/sources/HeuristicLab.Problems.DataAnalysis.Classification/3.3/HeuristicLab.Problems.DataAnalysis.Classification-3.3.csproj
@@ -11,7 +11,8 @@
     <RootNamespace>HeuristicLab.Problems.DataAnalysis.Classification</RootNamespace>
     <AssemblyName>HeuristicLab.Problems.DataAnalysis.Classification-3.3</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile></TargetFrameworkProfile>
+    <TargetFrameworkProfile>
+    </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -116,6 +117,7 @@
     <Compile Include="Interfaces\ISymbolicClassificationEvaluator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Interfaces\ISymbolicClassificationAnalyzer.cs" />
+    <Compile Include="Symbolic\Analyzer\TrainingBestSymbolicClassificationSolutionAnalyzer.cs" />
     <Compile Include="Symbolic\Analyzer\ValidationBestSymbolicClassificationSolutionAnalyzer.cs" />
     <Compile Include="Symbolic\Evaluators\OnlineAccuracyEvaluator.cs" />
     <Compile Include="Symbolic\Evaluators\SymbolicClassificationPearsonRSquaredEvaluator.cs" />
