Added custom serializers for generic HashSets and Dictionaries that include the Comparer property (#1375)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@5290 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Persistence/3.3/HeuristicLab.Persistence-3.3.csproj
+++ b/sources/HeuristicLab.Persistence/3.3/HeuristicLab.Persistence-3.3.csproj
@@ -140,6 +140,8 @@
     <Compile Include="Core\GeneratorBase.cs" />
     <Compile Include="Default\CompositeSerializers\ArraySerializer.cs" />
     <Compile Include="Default\CompositeSerializers\CompactNumberArray2StringSerializer.cs" />
+    <Compile Include="Default\CompositeSerializers\ConcreteDictionarySerializer.cs" />
+    <Compile Include="Default\CompositeSerializers\HashSetSerializer.cs" />
     <Compile Include="Default\CompositeSerializers\DictionarySerializer.cs" />
     <Compile Include="Default\CompositeSerializers\EnumerableSerializer.cs" />
     <Compile Include="Default\CompositeSerializers\EnumSerializer.cs" />
